added new works and finished

--- a/src/views/partials/works.hbs
+++ b/src/views/partials/works.hbs
@@ -286,8 +286,204 @@
   "category_email"]'
   imgSrc='@img/portfolio/portfolio-email-yandex-updating.jpg'}}
 
-  {{!-- Add --}}
+  {{>../portfolio/detailed title='Jobny' category='Web Application' groups='["category_all",
+  "category_app"]'
+  imgSrc='@img/portfolio/portfolio-jobny.jpg' hrefLink="portfolio-jobny.html"}}
 
+  {{>../portfolio/detailed title='Rost HR' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-rosthr.jpg' hrefLink="portfolio-rosthr.html"}}
 
+  {{>../portfolio/detailed title='Kovry' category='Internet Shop' groups='["category_all",
+  "category_shops"]'
+  imgSrc='@img/portfolio/portfolio-kovry.jpg' hrefLink="portfolio-kovry.html"}}
+
+  {{>../portfolio/detailed title='Avtoraketa Old Design' category='Multiland' groups='["category_all",
+  "category_multilandings"]'
+  imgSrc='@img/portfolio/portfolio-avtoraketa-olddesign.jpg' hrefLink="portfolio-avtoraketa-olddesign.html"}}
+
+  {{>../portfolio/detailed title='Infinity Fashion' category='Internet Shop' groups='["category_all",
+  "category_shops"]'
+  imgSrc='@img/portfolio/portfolio-infinityfashion.jpg' hrefLink="portfolio-infinityfashion.html"}}
+
+  {{>../portfolio/detailed title='Kapitalan' category='Multiland' groups='["category_all",
+  "category_multilandings"]'
+  imgSrc='@img/portfolio/portfolio-kapital.jpg' hrefLink="portfolio-kapital.html"}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-comfort.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-force.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-akcii.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-brif.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-missia.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-request.jpg'}}
+
+  {{>../portfolio/detailed title='Design Kate' category='Landing' groups='["category_all",
+  "category_landings"]'
+  imgSrc='@img/portfolio/portfolio-design-kate.jpg' hrefLink="portfolio-design-kate.html"}}
+
+  {{>../portfolio/detailed title='Rostjob' category='Web Application' groups='["category_all",
+  "category_app"]'
+  imgSrc='@img/portfolio/portfolio-rostjob.jpg' hrefLink="portfolio-rostjob.html"}}
+
+  {{>../portfolio/detailed title='Arabic Chatbot' category='Web Application' groups='["category_all",
+  "category_app"]'
+  imgSrc='@img/portfolio/portfolio-arabic-chat.jpg' hrefLink="portfolio-arabic-chat.html"}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-request.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-akucheck.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-closedoor.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-contructor.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-fullhard.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-helpfullist.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-helpfullist.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-mandarin.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-newny.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-outside.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-rafaello.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-seasons.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-springsales.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-zima.jpg'}}
+
+  {{>../portfolio/detailed title='English Cards' category='Web Service' groups='["category_all",
+  "category_app"]'
+  imgSrc='@img/portfolio/portfolio-english-cards.jpg' hrefLink="portfolio-english-cards.html"}}
+
+  {{>../portfolio/detailed title='English Cards' category='Web Application' groups='["category_all",
+  "category_service"]'
+  imgSrc='@img/portfolio/portfolio-radisson-sauna.jpg' hrefLink="portfolio-radisson-sauna.html"}}
+
+  {{>../portfolio/viewer title='English Cards' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-wim.jpg'}}
+
+  {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-firstreq.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-glo.jpg'}}
+
+  {{>../portfolio/viewer title='Johnson & Johnson' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-jj.jpg'}}
+
+  {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-nyhello.jpg'}}
+
+  {{>../portfolio/viewer title='Perekrestok' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-perik-freedelivery.jpg'}}
+
+  {{>../portfolio/viewer title='Samolet' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-samolet.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-tinkof.jpg'}}
+
+  {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-vtb-active.jpg'}}
+
+  {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-vtb-digestfin.jpg'}}
+
+  {{>../portfolio/viewer title='VTB' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-vtb-getting.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-dark.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-wrigley.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-authorproject.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-elife.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-garmony.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-notboring.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-skandinavia.jpg'}}
+
+  {{>../portfolio/viewer title='Yandex' category='Email Marketing' groups='["category_all",
+  "category_email"]'
+  imgSrc='@img/portfolio/portfolio-email-yandex-spring100.jpg'}}
 
 </div>
