--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -66,7 +66,7 @@ h6 {
 }
 
 a {
-  color: #0099cc;
+  color: #fff;
   text-decoration: none;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
