--- a/src/views/partials/contact.hbs
+++ b/src/views/partials/contact.hbs
@@ -4,79 +4,57 @@
       <h2>Contact</h2>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-4">
-        <div class="lm-info-block gray-default">
-          <i class="lnr lnr-map-marker"></i>
-          <h4>San Francisco</h4>
-          <span class="lm-info-block-value"></span>
-          <span class="lm-info-block-text"></span>
-        </div>
-        <div class="lm-info-block gray-default">
-          <i class="lnr lnr-phone-handset"></i>
-          <h4>415-832-2000</h4>
-          <span class="lm-info-block-value"></span>
-          <span class="lm-info-block-text"></span>
-        </div>
-        <div class="lm-info-block gray-default">
-          <i class="lnr lnr-envelope"></i>
-          <h4>alex@example.com</h4>
-          <span class="lm-info-block-value"></span>
-          <span class="lm-info-block-text"></span>
-        </div>
+      <div class="col-md-12 col-lg-6 col-xl-4">
         <div class="lm-info-block gray-default">
           <i class="lnr lnr-checkmark-circle"></i>
-          <h4>Freelance Available</h4>
+          <h4>Middle Front-end Developer</h4>
           <span class="lm-info-block-value"></span>
           <span class="lm-info-block-text"></span>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-8">
-        <div id="map" class="map"></div>
-        <div class="block-title">
-          <h3>How Can I <span>Help You?</span></h3>
-        </div>
-        <form id="contact_form" class="contact-form" action="contact_form/contact_form.php" method="post">
-          <div class="messages"></div>
-          <div class="controls two-columns">
-            <div class="fields clearfix">
-              <div class="left-column">
-                <div class="form-group form-group-with-icon">
-                  <input id="form_name" type="text" name="name" class="form-control" placeholder="" required="required"
-                    data-error="Name is required.">
-                  <label>Full Name</label>
-                  <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group form-group-with-icon">
-                  <input id="form_email" type="email" name="email" class="form-control" placeholder=""
-                    required="required" data-error="Valid email is required.">
-                  <label>Email Address</label>
-                  <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group form-group-with-icon">
-                  <input id="form_subject" type="text" name="subject" class="form-control" placeholder=""
-                    required="required" data-error="Subject is required.">
-                  <label>Subject</label>
-                  <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
-                </div>
-              </div>
-              <div class="right-column">
-                <div class="form-group form-group-with-icon">
-                  <textarea id="form_message" name="message" class="form-control" placeholder="" rows="7"
-                    required="required" data-error="Please, leave me a message."></textarea>
-                  <label>Message</label>
-                  <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
-                </div>
-              </div>
-            </div>
-            <input type="submit" class="button btn-send" value="Send message">
+        <a href="https://github.com/Valerij2000" target="_blank">
+          <div class="lm-info-block gray-default">
+            <i class="lnr lnr-code"></i>
+            <h4>GitHub</h4>
+            <span class="lm-info-block-value"></span>
+            <span class="lm-info-block-text"></span>
           </div>
-        </form>
+        </a>
+      </div>
+      <div class="col-md-12 col-lg-6 col-xl-4">
+        <a href="https://t.me/valerijshumkov" target="_blank">
+          <div class="lm-info-block gray-default">
+            <i class="lnr lnr-location"></i>
+            <h4>Telegram</h4>
+            <span class="lm-info-block-value"></span>
+            <span class="lm-info-block-text"></span>
+          </div>
+        </a>
+        <a href="https://wa.me/79613051320" target="_blank">
+          <div class="lm-info-block gray-default">
+            <i class="lnr lnr-bubble"></i>
+            <h4>WhatsApp</h4>
+            <span class="lm-info-block-value"></span>
+            <span class="lm-info-block-text"></span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-12 col-lg-12 col-xl-4">
+        <a href="tel:+7(961)-305-13-20">
+          <div class="lm-info-block gray-default">
+            <i class="lnr lnr-phone-handset"></i>
+            <h4>+7 (961)-305-13-20</h4>
+            <span class="lm-info-block-value"></span>
+            <span class="lm-info-block-text"></span>
+          </div>
+        </a>
+        <a href="mailto:valery.shumkov@mail.ru" target="_blank">
+          <div class="lm-info-block gray-default">
+            <i class="lnr lnr-envelope"></i>
+            <h4>valery.shumkov@mail.ru</h4>
+            <span class="lm-info-block-value"></span>
+            <span class="lm-info-block-text"></span>
+          </div>
+        </a>
       </div>
     </div>
   </div>
