--- a/src/views/portfolio/viewer.hbs
+++ b/src/views/portfolio/viewer.hbs
@@ -1,7 +1,7 @@
 <figure class="item lbimage" data-groups='{{groups}}'>
   <div class="portfolio-item-img">
-    <img src={{imgSrc}} alt={{title}} title={{title}} class="img">
-    <a class="lightbox" href={{imgSrc}} title={{title}}></a>
+    <img src={{imgSrc}} alt="{{title}}" title="{{title}}" class="img">
+    <a class="lightbox" href={{imgSrc}} title="{{title}}"></a>
   </div>
   <i class="far fa-image"></i>
   <h4 class="name">{{title}}</h4>
