--- a/src/views/partials/blog.hbs
+++ b/src/views/partials/blog.hbs
@@ -21,7 +21,7 @@
               <div class="post-info">
                 <div class="post-date">05 Mar 2020</div>
                 <a href="blog-1.html">
-                  <h4 class="blog-item-title">Why I Switched to Sketch For UI Design</h4>
+                  <h3 class="h4 blog-item-title">Why I Switched to Sketch For UI Design</h3>
                 </a>
               </div>
             </div>
@@ -41,7 +41,7 @@
               <div class="post-info">
                 <div class="post-date">23 Feb 2020</div>
                 <a href="blog-1.html">
-                  <h4 class="blog-item-title">Best Practices for Animated Progress Indicators</h4>
+                  <h3 class="h4 blog-item-title">Best Practices for Animated Progress Indicators</h3>
                 </a>
               </div>
             </div>
@@ -61,7 +61,7 @@
               <div class="post-info">
                 <div class="post-date">06 Feb 2020</div>
                 <a href="blog-1.html">
-                  <h4 class="blog-item-title">Designing the Perfect Feature Comparison Table</h4>
+                  <h3 class="h4 blog-item-title">Designing the Perfect Feature Comparison Table</h3>
                 </a>
               </div>
             </div>
@@ -81,7 +81,7 @@
               <div class="post-info">
                 <div class="post-date">07 Jan 2020</div>
                 <a href="blog-1.html">
-                  <h4 class="blog-item-title">An Overview of E-Commerce Platforms</h4>
+                  <h3 class="h4 blog-item-title">An Overview of E-Commerce Platforms</h3>
                 </a>
               </div>
             </div>
