--- a/src/views/partials/contact.hbs
+++ b/src/views/partials/contact.hbs
@@ -7,14 +7,14 @@
       <div class="col-md-12 col-lg-6 col-xl-4">
         <div class="lm-info-block gray-default">
           <i class="lnr lnr-checkmark-circle"></i>
-          <h4>Middle Front-end Developer</h4>
+          <h3 class="h4">Middle Front-end Developer</h3>
           <span class="lm-info-block-value"></span>
           <span class="lm-info-block-text"></span>
         </div>
         <a href="https://github.com/Valerij2000" target="_blank">
           <div class="lm-info-block gray-default">
             <i class="lnr lnr-code"></i>
-            <h4>GitHub</h4>
+            <h3 class="h4">GitHub</h3>
             <span class="lm-info-block-value"></span>
             <span class="lm-info-block-text"></span>
           </div>
@@ -24,7 +24,7 @@
         <a href="https://t.me/valerijshumkov" target="_blank">
           <div class="lm-info-block gray-default">
             <i class="lnr lnr-location"></i>
-            <h4>Telegram</h4>
+            <h3 class="h4">Telegram</h3>
             <span class="lm-info-block-value"></span>
             <span class="lm-info-block-text"></span>
           </div>
@@ -32,7 +32,7 @@
         <a href="https://wa.me/79613051320" target="_blank">
           <div class="lm-info-block gray-default">
             <i class="lnr lnr-bubble"></i>
-            <h4>WhatsApp</h4>
+            <h3 class="h4">WhatsApp</h3>
             <span class="lm-info-block-value"></span>
             <span class="lm-info-block-text"></span>
           </div>
@@ -42,7 +42,7 @@
         <a href="tel:+7(961)-305-13-20">
           <div class="lm-info-block gray-default">
             <i class="lnr lnr-phone-handset"></i>
-            <h4>+7 (961)-305-13-20</h4>
+            <h3 class="h4">+7 (961)-305-13-20</h3>
             <span class="lm-info-block-value"></span>
             <span class="lm-info-block-text"></span>
           </div>
@@ -50,7 +50,7 @@
         <a href="mailto:valery.shumkov@mail.ru" target="_blank">
           <div class="lm-info-block gray-default">
             <i class="lnr lnr-envelope"></i>
-            <h4>valery.shumkov@mail.ru</h4>
+            <h3 class="h4">valery.shumkov@mail.ru</h3>
             <span class="lm-info-block-value"></span>
             <span class="lm-info-block-text"></span>
           </div>
