--- a/src/views/partials/resume.hbs
+++ b/src/views/partials/resume.hbs
@@ -11,18 +11,18 @@
         <div class="timeline timeline-second-style clearfix">
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2018</h5>
+              <h4 class="h5 item-period">2018</h4>
               <span class="item-company">School of Music</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Pianist, violinist, guitarist, flute player</h4>
+              <h4 class="h4 item-title">Pianist, violinist, guitarist, flute player</h4>
               <p>The musical school number one in the city of Donetsk.</p>
             </div>
           </div>
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2022</h5>
+              <h4 class="h5 item-period">2022</h4>
               <span class="item-company">University</span>
             </div>
             <div class="divider"></div>
@@ -40,12 +40,12 @@
         <div class="timeline timeline-second-style clearfix">
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2021 - Current</h5>
+              <h4 class="h5 item-period">2021 - Current</h4>
               <span class="item-company">WIM</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Middle / Front-end / Developer</h4>
+              <h4 class="h4 item-title">Middle / Front-end / Developer</h4>
               <p>
                 Development of websites, services of varying complexity and layout of email letters on projects:
                 Yandex.Market,
@@ -55,19 +55,19 @@
           </div>
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2021 - 2022</h5>
+              <h5 class="h5 item-period">2021 - 2022</h5>
               <span class="item-company">ROSTJOB</span>
             </div>
             <div class="divider"></div>
             <div class="right-part">
-              <h4 class="item-title">Junior / Front-end / Developer / Ruby</h4>
+              <h4 class="h4 item-title">Junior / Front-end / Developer / Ruby</h4>
               <p>Development and support of a large application on the Ruby on Rails framework for job search,
                 development of a chat bot in native JS.</p>
             </div>
           </div>
           <div class="timeline-item clearfix">
             <div class="left-part">
-              <h5 class="item-period">2018 - 2021</h5>
+              <h5 class="h5 item-period">2018 - 2021</h5>
               <span class="item-company">Craft Group</span>
             </div>
             <div class="divider"></div>
@@ -126,28 +126,28 @@
         <div class="skills-info skills-second-style">
           <!-- Skill 1 -->
           <div class="skill clearfix">
-            <h4>Figma</h4>
+            <h4 class="h4">Figma</h4>
             <div class="skill-value">95%</div>
           </div>
           <div class="skill-container skill-1">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Sketch</h4>
+            <h4 class="h4">Sketch</h4>
             <div class="skill-value">65%</div>
           </div>
           <div class="skill-container skill-2">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Photoshop</h4>
+            <h4 class="h4">Photoshop</h4>
             <div class="skill-value">80%</div>
           </div>
           <div class="skill-container skill-3">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Adobe</h4>
+            <h4 class="h4">Adobe</h4>
             <div class="skill-value">90%</div>
           </div>
           <div class="skill-container skill-4">
@@ -160,140 +160,140 @@
         </div>
         <div class="skills-info skills-second-style">
           <div class="skill clearfix">
-            <h4>HTML / CSS / JS / jQuery</h4>
+            <h4 class="h4">HTML / CSS / JS / jQuery</h4>
             <div class="skill-value">93%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Pug / Slim / Handlebars</h4>
+            <h4 class="h4">Pug / Slim / Handlebars</h4>
             <div class="skill-value">95%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Scss / Sass / Less</h4>
+            <h4 class="h4">Scss / Sass / Less</h4>
             <div class="skill-value">96%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Gulp, Webpack, Grunt</h4>
+            <h4 class="h4">Gulp, Webpack, Grunt</h4>
             <div class="skill-value">90%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Bootstrap, Materialize.css</h4>
+            <h4 class="h4">Bootstrap, Materialize.css</h4>
             <div class="skill-value">80%</div>
           </div>
           <div class="skill-container skill-3">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Vue (Nuxt.js), React</h4>
+            <h4 class="h4">Vue (Nuxt.js), React</h4>
             <div class="skill-value">95%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>SPA / SSR / PWA</h4>
+            <h4 class="h4">SPA / SSR / PWA</h4>
             <div class="skill-value">95%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>WordPress, Ghost, Strapi, Joomla</h4>
+            <h4 class="h4">WordPress, Ghost, Strapi, Joomla</h4>
             <div class="skill-value">75%</div>
           </div>
           <div class="skill-container skill-8">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Bootstrap, Materialize.css</h4>
+            <h4 class="h4">Bootstrap, Materialize.css</h4>
             <div class="skill-value">88%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Three.js, Blender.js</h4>
+            <h4 class="h4">Three.js, Blender.js</h4>
             <div class="skill-value">93%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Phaser.js, Three.js</h4>
+            <h4 class="h4">Phaser.js, Three.js</h4>
             <div class="skill-value">91%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>PHP / SQL / Ruby / Python / Visual Basic / Pascal</h4>
+            <h4 class="h4">PHP / SQL / Ruby / Python / Visual Basic / Pascal</h4>
             <div class="skill-value">65%</div>
           </div>
           <div class="skill-container skill-2">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Ruby on Rails, Yii, Laravel</h4>
+            <h4 class="h4">Ruby on Rails, Yii, Laravel</h4>
             <div class="skill-value">58%</div>
           </div>
           <div class="skill-container skill-2">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>MySQL, NoSQL</h4>
+            <h4 class="h4">MySQL, NoSQL</h4>
             <div class="skill-value">89%</div>
           </div>
           <div class="skill-container skill-6">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Docker</h4>
+            <h4 class="h4">Docker</h4>
             <div class="skill-value">66%</div>
           </div>
           <div class="skill-container skill-8">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>GIT / GitHub / GitLab / Bitbucket</h4>
+            <h4 class="h4">GIT / GitHub / GitLab / Bitbucket</h4>
             <div class="skill-value">91%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>SEO, SMM</h4>
+            <h4 class="h4">SEO, SMM</h4>
             <div class="skill-value">85%</div>
           </div>
           <div class="skill-container skill-6">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Jest Test</h4>
+            <h4 class="h4">Jest Test</h4>
             <div class="skill-value">85%</div>
           </div>
           <div class="skill-container skill-6">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>Cisco</h4>
+            <h4 class="h4">Cisco</h4>
             <div class="skill-value">98%</div>
           </div>
           <div class="skill-container skill-9">
             <div class="skill-percentage"></div>
           </div>
           <div class="skill clearfix">
-            <h4>BPwin / ERwin Data Modeler / ARIS Express</h4>
+            <h4 class="h4">BPwin / ERwin Data Modeler / ARIS Express</h4>
             <div class="skill-value">80%</div>
           </div>
           <div class="skill-container skill-6">
@@ -318,7 +318,7 @@
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>IQOS</h4>
+              <h4 class="h4">IQOS</h4>
             </div>
             <div class="certi-id">
               <span>Game services, Landings, Mechanics, Multipages, CRM</span>
@@ -333,7 +333,7 @@
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Yandex</h4>
+              <h4 class="h4">Yandex</h4>
             </div>
             <div class="certi-id">
               <span>Quizes, Landings, Widgets, CRM Marketing</span>
@@ -348,7 +348,7 @@
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Procter & Gamble</h4>
+              <h4 class="h4">Procter & Gamble</h4>
             </div>
             <div class="certi-id">
               <span>Web applications, Web games, Multipages, CRM</span>
@@ -363,7 +363,7 @@
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Alfa</h4>
+              <h4 class="h4">Alfa</h4>
             </div>
             <div class="certi-id">
               <span>Web services, Web applications, Multipages</span>
@@ -378,7 +378,7 @@
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Samolet</h4>
+              <h4 class="h4">Samolet</h4>
             </div>
             <div class="certi-id">
               <span>CMS, Widgets, Web services, CRM, Email marketing</span>
@@ -393,7 +393,7 @@
           </div>
           <div class="certi-content">
             <div class="certi-title">
-              <h4>Perekrestok</h4>
+              <h4 class="h4">Perekrestok</h4>
             </div>
             <div class="certi-id">
               <span>Email marketing, Landings, Web services, CMS</span>
