--- a/src/views/portfolio/detailed.hbs
+++ b/src/views/portfolio/detailed.hbs
@@ -4,6 +4,6 @@
     <a href={{hrefLink}} class="ajax-page-load"></a>
   </div>
   <i class="far fa-file-alt"></i>
-  <h4 class="name">{{title}}</h4>
+  <h3 class="h4 name">{{title}}</h3>
   <span class="category">{{category}}</span>
 </figure>
