--- a/src/views/portfolio/video.hbs
+++ b/src/views/portfolio/video.hbs
@@ -4,6 +4,6 @@
     <a href="https://player.vimeo.com/video/158284739" class="lightbox mfp-iframe" title="Vimeo Video 1"></a>
   </div>
   <i class="fas fa-video"></i>
-  <h4 class="name">Vimeo Video 1</h4>
+  <h3 class="h4 name">Vimeo Video 1</h3>
   <span class="category">Vimeo Videos</span>
 </figure>
