--- a/src/views/portfolio/ybvideo.hbs
+++ b/src/views/portfolio/ybvideo.hbs
@@ -4,6 +4,6 @@
     <a href="https://www.youtube.com/embed/bg0gv2YpIok" class="lightbox mfp-iframe" title="YouTube Video 1"></a>
   </div>
   <i class="fas fa-video"></i>
-  <h4 class="name">YouTube Video 1</h4>
+  <h3 class="h4 name">YouTube Video 1</h3>
   <span class="category">YouTube Videos</span>
 </figure>
