--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -88,7 +88,7 @@
   margin-bottom: 25px;
 }
 
-.info-block-w-icon .ci-text h4 {
+.info-block-w-icon .ci-text .h4 {
   margin: 5px 0;
 }
 
@@ -139,7 +139,7 @@
   z-index: 1;
 }
 
-.lm-info-block h4 {
+.lm-info-block .h4 {
   font-size: 15px;
   margin-top: 8px;
 }
