--- a/src/styles/partials/_skills.scss
+++ b/src/styles/partials/_skills.scss
@@ -2,7 +2,7 @@
   margin-bottom: 30px;
 }
 
-.skills-info.skills-second-style h4 {
+.skills-info.skills-second-style .h4 {
   font-size: 13px;
   line-height: 1.1em;
   position: relative;
