--- a/src/views/layout/blog-header.hbs
+++ b/src/views/layout/blog-header.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="header-titles">
       <h2>Valerij Shumkov</h2>
-      <h4>Frontend-developer</h4>
+      <h3 class="h4">Frontend-developer</h3>
     </div>
   </div>
   <ul class="main-menu">
