--- a/src/views/partials/about.hbs
+++ b/src/views/partials/about.hbs
@@ -60,7 +60,7 @@
                 <i class="lnr lnr-store"></i>
               </div>
               <div class="ci-text">
-                <h4>Web-development</h4>
+                <h4 class="h4">Web-development</h4>
                 <p>Development of web applications, game mechanics, landing pages, multi-pages, online stores, email
                   development, CMS systems.</p>
               </div>
@@ -70,7 +70,7 @@
                 <i class="lnr lnr-select"></i>
               </div>
               <div class="ci-text">
-                <h4>SEO</h4>
+                <h4 class="h4">SEO</h4>
                 <p>SEO website promotion in search engines and optimization. Development of valid semantic layout for
                   successful promotion in search engines</p>
               </div>
@@ -86,7 +86,7 @@
                 <i class="lnr lnr-laptop-phone"></i>
               </div>
               <div class="ci-text">
-                <h4>Web Design</h4>
+                <h4 class="h4">Web Design</h4>
                 <p>Development of a unique design in popular applications for cross-adaptation, design of 3D models,
                   development of an interface of any complexity.</p>
               </div>
@@ -96,7 +96,7 @@
                 <i class="lnr lnr-flag"></i>
               </div>
               <div class="ci-text">
-                <h4>Management</h4>
+                <h4 class="h4">Management</h4>
                 <p>Web project management is the key to successfully moving a business forward, the right decisions at
                   the foundation of development will provide a huge competitive advantage.</p>
               </div>
@@ -191,7 +191,7 @@
       <div class="col-xs-12 col-sm-4">
         <div class="fun-fact gray-default">
           <i class="lnr lnr-heart"></i>
-          <h4>Projects</h4>
+          <h4 class="h4">Projects</h4>
           <span class="fun-fact-block-value">&gt;200</span>
           <span class="fun-fact-block-text"></span>
         </div>
@@ -199,7 +199,7 @@
       <div class="col-xs-12 col-sm-4">
         <div class="fun-fact gray-default">
           <i class="lnr lnr-clock"></i>
-          <h4>Working Hours</h4>
+          <h4 class="h4">Working Hours</h4>
           <span class="fun-fact-block-value">&gt;70,080</span>
           <span class="fun-fact-block-text"></span>
         </div>
@@ -207,7 +207,7 @@
       <div class="col-xs-12 col-sm-4 ">
         <div class="fun-fact gray-default">
           <i class="lnr lnr-star"></i>
-          <h4>Won IQOS Tender</h4>
+          <h4 class="h4">Won IQOS Tender</h4>
           <span class="fun-fact-block-value">10</span>
           <span class="fun-fact-block-text"></span>
         </div>
