--- a/src/views/portfolio/audio.hbs
+++ b/src/views/portfolio/audio.hbs
@@ -5,6 +5,6 @@
       class="lightbox mfp-iframe" title="SoundCloud Audio"></a>
   </div>
   <i class="fa fa-volume-up"></i>
-  <h4 class="name">SoundCloud Audio</h4>
+  <h3 class="h4 name">SoundCloud Audio</h3>
   <span class="category">SoundCloud</span>
 </figure>
