--- a/src/views/portfolio/viewer.hbs
+++ b/src/views/portfolio/viewer.hbs
@@ -4,6 +4,6 @@
     <a class="lightbox" href={{imgSrc}} title="{{title}}"></a>
   </div>
   <i class="far fa-image"></i>
-  <h4 class="name">{{title}}</h4>
+  <h3 class="h4 name">{{title}}</h3>
   <span class="category">{{category}}</span>
 </figure>
