--- a/src/pages/portfolio/portfolio-iqos-choice.hbs
+++ b/src/pages/portfolio/portfolio-iqos-choice.hbs
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="ajax-page-title">
-      <h1>IQOS</h1>
+      <h1 class="h1">IQOS</h1>
     </div>
     <div class="row">
       <div class="col-sm-8 col-md-8 portfolio-block">
@@ -47,7 +47,7 @@
         <!-- Project Description -->
         <div class="project-description">
           <div class="block-title">
-            <h3>Description</h3>
+            <h3 class="h3">Description</h3>
           </div>
           <ul class="project-general-info">
             <li>
@@ -62,7 +62,7 @@
           </ul>
           <div class="tags-block">
             <div class="block-title">
-              <h3>Technology</h3>
+              <h3 class="h3">Technology</h3>
             </div>
             <ul class="tags">
               <li><a>Web Landing</a></li>
@@ -75,7 +75,7 @@
           </div>
           <div class="btn-group share-buttons">
             <div class="block-title">
-              <h3>Social</h3>
+              <h3 class="h3">Social</h3>
             </div>
             {{>../../views/templates/social-link}}
           </div>
