--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -30,26 +30,26 @@ body {
   background-size: cover;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
   color: #eee;
   font-family: 'Poppins', Helvetica, sans-serif;
   font-weight: 600;
 }
 
-h1 {
+.h1 {
   font-size: 32px;
 }
 
-h2 {
+.h2 {
   font-size: 27px;
 }
 
-h3 {
+.h3 {
   font-size: 21px;
 }
 
