--- a/src/styles/partials/_media.scss
+++ b/src/styles/partials/_media.scss
@@ -72,7 +72,7 @@
     overflow: auto !important;
   }
 
-  .header-titles h2 {
+  .header-titles .h2 {
     font-size: 30px;
     margin-bottom: 10px;
   }
