--- a/src/views/layout/blog-header.hbs
+++ b/src/views/layout/blog-header.hbs
@@ -4,7 +4,7 @@
       <img src="@img/avatar/photo-portfolio.png" alt="Valerij Shumkov">
     </div>
     <div class="header-titles">
-      <h2>Valerij Shumkov</h2>
+      <h2 class="h2">Valerij Shumkov</h2>
       <h3 class="h4">Frontend-developer</h3>
     </div>
   </div>
