--- a/src/styles/partials/_detailed-resume.scss
+++ b/src/styles/partials/_detailed-resume.scss
@@ -61,7 +61,7 @@
   text-align: left;
 }
 
-.ajax-page-title h1 {
+.ajax-page-title .h1 {
   display: inline-block;
   margin: 0;
 }
@@ -89,7 +89,7 @@
   background-color: #333;
 }
 
-.ajax-page-wrapper .block-title h3 {
+.ajax-page-wrapper .block-title .h3 {
   font-size: 18px;
   margin-bottom: 15px;
 }
