--- a/src/styles/partials/_updates.scss
+++ b/src/styles/partials/_updates.scss
@@ -48,7 +48,7 @@
   text-align: center;
 }
 
-.title-block h2 {
+.title-block .h2 {
   color: #f5f5f5;
   font-size: 60px;
   line-height: 74px;
@@ -152,7 +152,7 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  .title-block h2 {
+  .title-block .h2 {
     font-size: 48px;
     line-height: 56px;
     margin: 0 0 10px;
