--- a/src/views/partials/about.hbs
+++ b/src/views/partials/about.hbs
@@ -1,7 +1,7 @@
 <section data-id="about-me" class="animated-section">
   <div class="section-content">
     <div class="page-title">
-      <h2>About <span>Me</span></h2>
+      <h2 class="h2">About <span>Me</span></h2>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-7">
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="block-title">
-          <h3>What <span>I Do</span></h3>
+          <h3 class="h3">What <span>I Do</span></h3>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="block-title">
-          <h3>Cilents</h3>
+          <h3 class="h3">Cilents</h3>
         </div>
       </div>
     </div>
@@ -183,7 +183,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="block-title">
-          <h3>Fun <span>Facts</span></h3>
+          <h3 class="h3">Fun <span>Facts</span></h3>
         </div>
       </div>
     </div>
