--- a/src/views/partials/blog.hbs
+++ b/src/views/partials/blog.hbs
@@ -1,7 +1,7 @@
 <section data-id="blog" class="animated-section">
   <div class="section-content">
     <div class="page-title">
-      <h2>Blog</h2>
+      <h2 class="h2">Blog</h2>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-12">
