--- a/src/views/partials/contact.hbs
+++ b/src/views/partials/contact.hbs
@@ -1,7 +1,7 @@
 <section data-id="contact" class="animated-section">
   <div class="section-content">
     <div class="page-title">
-      <h2>Contact</h2>
+      <h2 class="h2">Contact</h2>
     </div>
     <div class="row">
       <div class="col-md-12 col-lg-6 col-xl-4">
