--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="title-block">
-          <h2>Valerij Shumkov</h2>
+          <h2 class="h2">Valerij Shumkov</h2>
           <div class="owl-carousel text-rotation">
             <div class="item">
               <div class="sp-subtitle">Frontend-developer</div>
