--- a/src/views/partials/resume.hbs
+++ b/src/views/partials/resume.hbs
@@ -1,12 +1,12 @@
 <section data-id="resume" class="animated-section">
   <div class="section-content">
     <div class="page-title">
-      <h2>Resume</h2>
+      <h2 class="h2">Resume</h2>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-7">
         <div class="block-title">
-          <h3>Education</h3>
+          <h3 class="h3">Education</h3>
         </div>
         <div class="timeline timeline-second-style clearfix">
           <div class="timeline-item clearfix">
@@ -35,7 +35,7 @@
         </div>
         <div class="white-space-50"></div>
         <div class="block-title">
-          <h3>Experience</h3>
+          <h3 class="h3">Experience</h3>
         </div>
         <div class="timeline timeline-second-style clearfix">
           <div class="timeline-item clearfix">
@@ -80,7 +80,7 @@
         </div>
         <div class="white-space-50"></div>
         <div class="block-title">
-          <h3>Knowledges</h3>
+          <h3 class="h3">Knowledges</h3>
         </div>
         <ul class="knowledges">
           <li>Marketing</li>
@@ -121,7 +121,7 @@
       <div class="col-xs-12 col-sm-5">
         <!-- Design Skills -->
         <div class="block-title">
-          <h3>Design <span>Skills</span></h3>
+          <h3 class="h3">Design <span>Skills</span></h3>
         </div>
         <div class="skills-info skills-second-style">
           <!-- Skill 1 -->
@@ -156,7 +156,7 @@
         </div>
         <div class="white-space-10"></div>
         <div class="block-title">
-          <h3>Coding <span>Skills</span></h3>
+          <h3 class="h3">Coding <span>Skills</span></h3>
         </div>
         <div class="skills-info skills-second-style">
           <div class="skill clearfix">
@@ -306,7 +306,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="block-title">
-          <h3>Mainstream Projects</h3>
+          <h3 class="h3">Mainstream Projects</h3>
         </div>
       </div>
     </div>
